--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,7 @@
 
             // Check if the username and password are correct (you can replace this with your validation logic)
             // For example, you can compare the values with a predefined username and password
-            if (username === 'iloveyou' && password === '09122003') {
+            if (username === 'sotesdante@yahoo.com' && password === 'rs595278') {
                 // If the credentials are correct, redirect to love.html
                 window.location.href = 'love.html';
             } else {
